@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.110 2001/04/10 13:42:21 stelian Exp $
+$Id: CHANGES,v 1.111 2001/04/11 13:42:52 stelian Exp $
 
 Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 ======================================================================
@@ -45,6 +45,10 @@ Changes between versions 0.4b21 and 0.4b22 (released ????????????????)
 8.	Added the possibility to dump several files and directories
 	in a single invocation of dump. Thanks to Uwe Gohlke 
 	<uwe@ugsoft.de> for implementing this option.
+
+9.	Fixed the dumping and restoring of files with holes
+	(files ending with holes didn't get dumped or restored 
+	correctly).
 
 Changes between versions 0.4b20 and 0.4b21 (released January 13, 2001)
 ======================================================================
